# suffix-array

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: buildsa.cpp  fasta_reader.cpp  fasta_reader.h  genome.cpp  genome.h  inspectsa.cpp  query.cpp  query.h  querysa.cpp  sa_index.cpp  sa_index.h
